--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,6 @@ html {
   border-color: #f33;
 }
 
-input:invalid,
-input[type="checkbox"]:invalid + label::before {
-  border-color: #f33;
-}
-
 .error-message {
   display: none;
   background-color: #fee;
@@ -29,8 +24,10 @@ input[type="checkbox"]:invalid + label::before {
   color: #fff;
 }
 
-.error-message:first-child,
-input:invalid + .error-message,
-input:invalid + label + .error-message {
+.is-validated > .error-message:first-child,
+.is-validated input:invalid + .error-message,
+.is-validated input:invalid + label + .error-message,
+.is-validated:invalid + .error-message,
+.is-validated:invalid + label + .error-message {
   display: block;
 }
